Fix issues with category icons in search results list view (#8099)
* Change status badge from absolute position to a flex element to prevent overlap with icons

* Fix icons displaying in the same color as the background and inconsistent spacing

--- a/web-ui/src/main/resources/catalog/views/default/less/gn_card_default.less
+++ b/web-ui/src/main/resources/catalog/views/default/less/gn_card_default.less
@@ -176,6 +176,7 @@
   .gn-card-footer {
     padding: 5px 10px 5px 5px;
     height: calc(~"@{gn-card-footer-height} - 2px");
+    display: flex;
     &.panel-footer {
       background: none;
       border-color: transparent;
@@ -204,6 +205,9 @@
     }
     .gn-md-related {
       margin-right: 3px;
+    }
+    .gn-toolbar {
+      flex-grow: 1;
     }
     .gn-md-category {
       margin: 10px 0;
